changing absolute path to relative

--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css"
     />
-    <link rel="stylesheet" href="/sweetalert2.css" />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="./sweetalert2.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <noscript>
